--- a/index.html
+++ b/index.html
@@ -6,128 +6,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="author" content="沈维杰">
   <meta http-equiv="Cache-Control" content="no-siteapp" />
-  <title>Magica Voxel - 查看vox模型!</title>
-  <script src="./lib/vue/vue.js"></script>
+  <link rel="icon" href="./favicon.ico">
+  <title>Magica Voxel</title>
+  <script src="./lib/vue/vue.js" type="text/javascript"></script>
   <script src="./lib/threeJS/three.js"></script>
-  <script src="./style/js/mdui.js"></script>
+  <script src="./lib/threeJS/VOXLoader.js" type="module"></script>
+  <script src="./style/js/mdui.js" type="text/javascript"></script>
   <link rel="stylesheet" href="./style/css/mdui.css">
 </head>
 
-<body class="mdui-theme-primary-grey mdui-color-grey-400">
-  <script src="./lib/common/commonAPP.js"></script>
+<body class="mdui-theme-primary-grey mdui-color-grey-200">
+  <div id="common">
+    <div class="mdui-toolbar mdui-color-grey-900 mdui-appbar-scroll-toolbar-hide mdui-shadow-4">
+      <div class="mdui-container mdui-center">
+        <p class="mdui-typo-title">Magica Voxel | 在网页上查看vox模型</p>
+      </div>
+    </div>
 
-  <div class="mdui-toolbar mdui-color-theme mdui-appbar-scroll-toolbar-hide mdui-shadow-4">
-    <div class="mdui-container mdui-center">
+    <mdui-progress v-if="is_progressing"></mdui-progress>
 
-      <p class="mdui-typo-title">Magica Voxel | 在网页上查看vox模型</p>
+    <div class="mdui-container mdui-color-theme-200 mdui-text-color-theme-100 mdui-shadow-4">
+      <a v-if=is_test href="./test.html">前往测试页面</a>
+
+      <div mdui-dialog="{target:'#v-0'}" @click="browseModel(vox_models[0])">
+        <mdui-card v-for="(model, index) in vox_models" v-bind:key="index" v-bind:vox_model="model"></mdui-card>
+      </div>
+
+      <div class="mdui-dialog" id="v-0">
+        <div class="mdui-dialog-title">标题</div>
+        <div class="mdui-dialog-content">
+          模型,一些介绍,等等.<br>有一个就够了
+        </div>
+        <div class="mdui-dialog-actions">
+          <button class="mdui-btn mdui-ripple">下载</button>
+          <button class="mdui-btn mdui-ripple" mdui-dialog-close>关闭</button>
+        </div>
+      </div>
+      
     </div>
   </div>
-
-  <div class="mdui-progress mdui-hidden">
-    <div class="mdui-progress-indeterminate"></div>
-  </div>
-
-  <div class="mdui-container mdui-color-theme-700 mdui-text-color-theme-100 mdui-shadow-4">
-    <div class="mdui-row">
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-
-          <div class="mdui-card-media">
-            <img src="./temp/az.png" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">收手吧,阿祖.外面全是成龙</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-          <div class="mdui-card-media">
-            <img src="./temp/rxnh.jpg" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">日系男孩</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-          <div class="mdui-card-media">
-            <img src="./temp/rsg.gif" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">这集魔女也很温馨</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-          <div class="mdui-card-media">
-            <img src="./temp/daotu.png" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">伸手盗图</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-    
-    <div class="mdui-row">
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-          <div class="mdui-card-media">
-            <img src="./temp/zx.jpg" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">蛮怪的</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-          <div class="mdui-card-media">
-            <img src="./temp/asdasdasd.jpg" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">definded</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="mdui-col-xs-3 mdui-m-b-2">
-        <div class="mdui-card mdui-hoverable">
-          <div class="mdui-card-media">
-            <img src="./temp/hhhh.jpg" alt="" srcset="">
-          </div>
-          <div class="mdui-card-media-covered">
-            <div class="mdui-card-primary">
-              <div class="mdui-card-primary-title">呼</div>
-            </div>
-          </div>
-        </div>
-      </div>
-
-    </div>
-  </div>
+  <script src="./lib/common/commonAPP.js" type="text/javascript"></script>
 </body>
 
 </html>
